# lawGPT

./: README.md
backend/: .gitignore  README.md  app.py  docker-compose.yml  init.sql  pyproject.toml  start.bat  start.sh
backend/lawgpt/: db.py  exceptions.py  log.py  middlewares.py  response.py  server.py
backend/lawgpt/cmd/: cmdline.py
backend/lawgpt/config/: __init__.py  settings.yml
backend/lawgpt/models/: dbModels.py  reqModels.py  respModels.py
backend/lawgpt/router/: auth.py  chat.py  chatopenai.py  conv.py
backend/lawgpt/services/: chatService.py  emailService.py  redisService.py
backend/lawgpt/utils/: user_manager.py  utc_datetime.py
frontend/: .env.example  Dockerfile  README.md  app.vue  docker-compose.yaml  nuxt.config.ts  package.json  start.sh
frontend/components/: AppBackToLogin.vue  ChatAvatar.vue  ChatContentBar.vue  ChatList.vue  ChatMessageItem.vue  ChatMessageRole.vue  ChatMessageSystem.vue  ChatSendBar.vue  ChatSetting.vue  ChatTitleBar.vue  ChatWelcome.vue  FuncBar.vue
frontend/composables/: setting.ts  tiktoken.ts
frontend/layouts/: auth.vue  conv.vue
frontend/locales/: en.json  ja.json  zh.json
frontend/pages/: conv.vue  forgot-password.vue  index.vue  login.vue  register.vue
frontend/server/api/auth/: login.post.ts  logout.post.ts  register.post.ts  reset.post.ts  (+2 more)
frontend/server/utils/: axios.ts  h3.ts
frontend/stores/: auth.ts  chat.ts
frontend/types/: api.ts
frontend/types/auth/: user.ts
frontend/types/chat/: conversation.ts  index.ts  message.ts  setting.ts
frontend/utils/: auth.ts  cookies.ts  tips.ts
(+10 files in other folders)
